[project]
name = "fossunited"
authors = [
    { name = "FOSSUnited", email = "developers@fossunited.org"}
]
description = "Built on Frappe"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "razorpay~=1.4.2",
    "PyGithub~=2.3.0",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"

[tool.ruff]
line-length = 100
lint.select = [
    "I",
    "E"
]
